--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
       Modelo de Comportamiento - DFD
     </h1>
     <p class="my-3 text-light fs-5">
-      El Diagrama de contexto muestra de manera grafica la funcionalidad de el sistema en su nivel mas contemplativo : 
+      El Diagrama de flujo de datos muestra de manera grafica la funcionalidad de el sistema en su nivel mas contemplativo : 
       Acontinuacion POR NIVELES <br>
     </p>
   </div>
