--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">Integrantes:</h5>
-                    <p class="card-text">>Sandy</p>
-                    <p class="card-text">>Gaby</p>
+                    <p class="card-text">>Sandy Carolina Yujra Condori</p>
+                    <p class="card-text">>Gabriela Quispe Mamani</p>
                     <p class="card-text">>Lenz Abad Alanoca Ojeda</p>
                     <p class="card-text">>Jorge Diego Jimenez Clemente</p>
                     <p class="card-text"><small class="text-body-secondary">Proyecto EDUCAgESTOR</small></p>
