--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                 <div class="col-md-8">
                   <div class="card-body">
                     <h5 class="card-title">Integrantes:</h5>
-                    <p class="card-text">>Sandy Carolina Yujra Condori</p>
-                    <p class="card-text">>Gabriela Quispe Mamani</p>
-                    <p class="card-text">>Lenz Abad Alanoca Ojeda</p>
-                    <p class="card-text">>Jorge Diego Jimenez Clemente</p>
+                    <p class="card-text">>Juan Vidal Mamani Riveros</p>
+                    <p class="card-text">>Yamil Navia Yauli</p>
+                    <p class="card-text">>Nathalie Maya Usnayo Velasco</p>
+                    <p class="card-text">>Caleb Ramiro Mendoza Calderon</p>
                     <p class="card-text"><small class="text-body-secondary">Proyecto EDUCAgESTOR</small></p>
                   </div>
                 </div>
